// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/button/demo/basic.md correctly 1`] = `
<div>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Primary
    </span>
  </button>
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      Default
    </span>
  </button>
  <button
    class="ant-btn ant-btn-dashed"
    type="button"
  >
    <span>
      Dashed
    </span>
  </button>
  <button
    class="ant-btn ant-btn-danger"
    type="button"
  >
    <span>
      Danger
    </span>
  </button>
</div>
`;

exports[`renders ./components/button/demo/button-group.md correctly 1`] = `
<div>
  <h4>
    Basic
  </h4>
  <div
    class="ant-btn-group"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Cancel
      </span>
    </button>
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        OK
      </span>
    </button>
  </div>
  <div
    class="ant-btn-group"
  >
    <button
      class="ant-btn"
      disabled=""
      type="button"
    >
      <span>
        L
      </span>
    </button>
    <button
      class="ant-btn"
      disabled=""
      type="button"
    >
      <span>
        M
      </span>
    </button>
    <button
      class="ant-btn"
      disabled=""
      type="button"
    >
      <span>
        R
      </span>
    </button>
  </div>
  <div
    class="ant-btn-group"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        L
      </span>
    </button>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        M
      </span>
    </button>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        M
      </span>
    </button>
    <button
      class="ant-btn ant-btn-dashed"
      type="button"
    >
      <span>
        R
      </span>
    </button>
  </div>
  <h4>
    With Icon
  </h4>
  <div
    class="ant-btn-group"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <i
        class="anticon anticon-left"
      >
        
      </i>
      <span>
        Go back
      </span>
    </button>
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Go forward
      </span>
      <i
        class="anticon anticon-right"
      >
        
      </i>
    </button>
  </div>
  <div
    class="ant-btn-group"
  >
    <button
      class="ant-btn ant-btn-primary ant-btn-icon-only"
      type="button"
    >
      <i
        class="anticon anticon-cloud"
      >
        
      </i>
    </button>
    <button
      class="ant-btn ant-btn-primary ant-btn-icon-only"
      type="button"
    >
      <i
        class="anticon anticon-cloud-download"
      >
        
      </i>
    </button>
  </div>
</div>
`;

exports[`renders ./components/button/demo/disabled.md correctly 1`] = `
<div>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Primary
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    disabled=""
    type="button"
  >
    <span>
      Primary(disabled)
    </span>
  </button>
  <br>
    
  </br>
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      Default
    </span>
  </button>
  <button
    class="ant-btn"
    disabled=""
    type="button"
  >
    <span>
      Default(disabled)
    </span>
  </button>
  <br>
    
  </br>
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      Ghost
    </span>
  </button>
  <button
    class="ant-btn"
    disabled=""
    type="button"
  >
    <span>
      Ghost(disabled)
    </span>
  </button>
  <br>
    
  </br>
  <button
    class="ant-btn ant-btn-dashed"
    type="button"
  >
    <span>
      Dashed
    </span>
  </button>
  <button
    class="ant-btn ant-btn-dashed"
    disabled=""
    type="button"
  >
    <span>
      Dashed(disabled)
    </span>
  </button>
</div>
`;

exports[`renders ./components/button/demo/ghost.md correctly 1`] = `
<div
  style="background:rgb(190, 200, 200);padding:26px 16px 16px"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-background-ghost"
    type="button"
  >
    <span>
      Primary
    </span>
  </button>
  <button
    class="ant-btn ant-btn-background-ghost"
    type="button"
  >
    <span>
      Default
    </span>
  </button>
  <button
    class="ant-btn ant-btn-dashed ant-btn-background-ghost"
    type="button"
  >
    <span>
      Dashed
    </span>
  </button>
  <button
    class="ant-btn ant-btn-danger ant-btn-background-ghost"
    type="button"
  >
    <span>
      danger
    </span>
  </button>
</div>
`;

exports[`renders ./components/button/demo/icon.md correctly 1`] = `
<div>
  <button
    class="ant-btn ant-btn-primary ant-btn-circle ant-btn-icon-only"
    type="button"
  >
    <i
      class="anticon anticon-search"
    >
      
    </i>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <i
      class="anticon anticon-search"
    >
      
    </i>
    <span>
      Search
    </span>
  </button>
  <button
    class="ant-btn ant-btn-circle ant-btn-icon-only"
    type="button"
  >
    <i
      class="anticon anticon-search"
    >
      
    </i>
  </button>
  <button
    class="ant-btn"
    type="button"
  >
    <i
      class="anticon anticon-search"
    >
      
    </i>
    <span>
      Search
    </span>
  </button>
  <br>
    
  </br>
  <button
    class="ant-btn ant-btn-circle ant-btn-icon-only"
    type="button"
  >
    <i
      class="anticon anticon-search"
    >
      
    </i>
  </button>
  <button
    class="ant-btn"
    type="button"
  >
    <i
      class="anticon anticon-search"
    >
      
    </i>
    <span>
      Search
    </span>
  </button>
  <button
    class="ant-btn ant-btn-dashed ant-btn-circle ant-btn-icon-only"
    type="button"
  >
    <i
      class="anticon anticon-search"
    >
      
    </i>
  </button>
  <button
    class="ant-btn ant-btn-dashed"
    type="button"
  >
    <i
      class="anticon anticon-search"
    >
      
    </i>
    <span>
      Search
    </span>
  </button>
</div>
`;

exports[`renders ./components/button/demo/loading.md correctly 1`] = `
<span>
  <button
    class="ant-btn ant-btn-primary ant-btn-loading"
    type="button"
  >
    <i
      class="anticon anticon-spin anticon-loading"
    >
      
    </i>
    <span>
      Loading
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary ant-btn-sm ant-btn-loading"
    type="button"
  >
    <i
      class="anticon anticon-spin anticon-loading"
    >
      
    </i>
    <span>
      Loading
    </span>
  </button>
  <br>
    
  </br>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Click me!
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <i
      class="anticon anticon-poweroff"
    >
      
    </i>
    <span>
      Click me!
    </span>
  </button>
  <br>
    
  </br>
  <button
    class="ant-btn ant-btn-circle ant-btn-loading"
    type="button"
  >
    <i
      class="anticon anticon-spin anticon-loading"
    >
      
    </i>
  </button>
  <button
    class="ant-btn ant-btn-primary ant-btn-circle ant-btn-loading"
    type="button"
  >
    <i
      class="anticon anticon-spin anticon-loading"
    >
      
    </i>
  </button>
</span>
`;

exports[`renders ./components/button/demo/multiple.md correctly 1`] = `
<div>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      primary
    </span>
  </button>
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      secondary
    </span>
  </button>
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      more 
    </span>
    <i
      class="anticon anticon-down"
    >
      
    </i>
  </button>
</div>
`;

exports[`renders ./components/button/demo/size.md correctly 1`] = `
<div>
  <div
    class="ant-radio-group"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
        >
          
        </input>
        <span
          class="ant-radio-button-inner"
        >
          
        </span>
      </span>
      <span>
        Large
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
        >
          
        </input>
        <span
          class="ant-radio-button-inner"
        >
          
        </span>
      </span>
      <span>
        Default
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
        >
          
        </input>
        <span
          class="ant-radio-button-inner"
        >
          
        </span>
      </span>
      <span>
        Small
      </span>
    </label>
  </div>
  <br>
    
  </br>
  <br>
    
  </br>
  <button
    class="ant-btn ant-btn-primary ant-btn-lg"
    type="button"
  >
    <span>
      Primary
    </span>
  </button>
  <button
    class="ant-btn ant-btn-lg"
    type="button"
  >
    <span>
      Normal
    </span>
  </button>
  <button
    class="ant-btn ant-btn-dashed ant-btn-lg"
    type="button"
  >
    <span>
      Dashed
    </span>
  </button>
  <button
    class="ant-btn ant-btn-danger ant-btn-lg"
    type="button"
  >
    <span>
      Danger
    </span>
  </button>
  <br>
    
  </br>
  <button
    class="ant-btn ant-btn-primary ant-btn-circle ant-btn-lg ant-btn-icon-only"
    type="button"
  >
    <i
      class="anticon anticon-download"
    >
      
    </i>
  </button>
  <button
    class="ant-btn ant-btn-primary ant-btn-lg"
    type="button"
  >
    <i
      class="anticon anticon-download"
    >
      
    </i>
    <span>
      Download
    </span>
  </button>
  <br>
    
  </br>
  <div
    class="ant-btn-group ant-btn-group-lg"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <i
        class="anticon anticon-left"
      >
        
      </i>
      <span>
        Backward
      </span>
    </button>
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Forward
      </span>
      <i
        class="anticon anticon-right"
      >
        
      </i>
    </button>
  </div>
</div>
`;
